fix: blog cards too wide

--- a/src/components/BlogCard.css
+++ b/src/components/BlogCard.css
@@ -13,7 +13,6 @@
 }
 
 .blogCardContainer {
-  width: 100%;
   padding: 15px 15px;
   transition: all 0.2s;
 }
